# godot-kotlin-native

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  API_DIFFERENCES.md  CMakeLists.txt  COMPILING.md  COMPILING_FROM_SOURCE.md  GETTING_STARTED.md  LICENSE  README.md  REGISTRATION.md  build.gradle  build.gradle.kts  buildAll.bat  buildAll.sh  gradle.properties  settings.gradle  settings.gradle.kts
wrapper/: .gitignore  CMakeLists.txt  README.md  build.gradle  build.gradle.kts  cleanup.bat  godot_classes.xml  gradle.properties  log.txt  settings.gradle  settings.gradle.kts  sudo.cmd
wrapper/KotlinCMakeModule/: CMakeDetermineKotlinCompiler.cmake  CMakeKotlinInformation.cmake
wrapper/godot-library/: build.gradle  build.gradle.kts
wrapper/godot-library-extension/: build.gradle  build.gradle.kts
wrapper/godot-library/src/common/kotlin/godot/: GodotObject.kt
wrapper/godot-library/src/common/kotlin/godot/core/: AABB.kt  Basis.kt  Color.kt  Dictionary.kt  GDArray.kt  GodotGlobal.kt  NodePath.kt  Plane.kt  PoolByteArray.kt  PoolColorArray.kt  PoolIntArray.kt  PoolRealArray.kt  PoolStringArray.kt  PoolVector2Array.kt  PoolVector3Array.kt  Quat.kt  RID.kt  Rect2.kt  Transform.kt  Transform2D.kt  Variant.kt  Vector2.kt  Vector3.kt
wrapper/godot-library/src/common/kotlin/godot/registration/: Enums.kt
wrapper/godot-library/src/main/c_interop/: godot.def  registrations.h
wrapper/godot-library/src/main/kotlin/godot/: GodotObject.kt
wrapper/godot-library/src/native/c_interop/: godot.def
wrapper/godot-library/src/native/kotlin/godot/: GodotObject.kt
wrapper/godot-library/src/test/godot/tests/: AABBTest.kt  PoolColorArrayTest.kt  PoolIntArrayTest.kt  PoolVector3ArrayTest.kt  main.kt
wrapper/gradle/wrapper/: gradle-wrapper.properties
wrapper/src/main/c/: wrapper.c
wrapper/src/main/c_interop/: godot.def  registrations.h
wrapper/src/main/kotlin/godot/: GodotClass.kt  GodotObject.kt  Object.kt  ObjectPool.kt  Registration.kt  RegistrationList.kt  Utils.kt  entry.kt  g_print.kt
wrapper/src/main/kotlin/godot/core/: AABB.kt  Basis.kt  Color.kt  CoreType.kt  Defs.kt  Dictionary.kt  GDArray.kt  GodotArray.kt  GodotGlobal.kt  GodotString.kt  NodePath.kt  Plane.kt  PoolByteArray.kt  PoolColorArray.kt  PoolIntArray.kt  PoolRealArray.kt  PoolStringArray.kt  PoolVector2Array.kt  PoolVector3Array.kt  Quat.kt  RID.kt  Rect2.kt  Ref.kt  String.kt  Transform.kt  Transform2D.kt  Utils.kt  Variant.kt  Vector2.kt  Vector3.kt
wrapper/src/main/kotlin/godot/registration/: Registration.kt  Tools.kt
wrapper/src/main/kotlin/shared/: entry.kt  main.kt
wrapper/src/shared/: Entry.kt  HUD.kt  Main.kt  Mob.kt  MobPath.kt  MobSpawnLocation.kt  Player.kt  PlayerCollisionShape.kt  PlayerSprite.kt  Registration.kt  TestClass.kt  entry.kt  main.kt
wrapper/src/test/godot/tests/: DictionaryTest.kt  GodotArrayTest.kt  PoolByteArrayTest.kt  PoolColorArrayTest.kt  PoolIntArrayTest.kt  PoolRealArrayTest.kt  PoolVector2ArrayTest.kt  PoolVector3ArrayTest.kt
wrapper/src/test/kotlin/: AABBTest.kt  BasisTest.kt  DictionaryTest.kt  GodotArrayTest.kt  GodotStringTest.kt  PoolByteArrayTest.kt  PoolColorArrayTest.kt  PoolIntArrayTest.kt  PoolRealArrayTest.kt  PoolVector2ArrayTest.kt  PoolVector3ArrayTest.kt  main.kt  test.kt
(+1632 files in other folders)
